--- a/public/templates/features.html
+++ b/public/templates/features.html
@@ -62,7 +62,7 @@
  
         <div class="container masthead-text-title">
             <h1 class="masthead-subtitle  title-size text-center">
-                <b class="masthead-title-big">Feature Tour</b>
+                <b class="masthead-title-big">feature tour</b>
             </h1>
         </div>
     
@@ -295,7 +295,7 @@
                                         </div>
 
                                         <div class="form-group text-center">
-                                            <button type="submit" class="btn btn-transparent">Notify me</button>
+                                            <button type="submit" class="btn btn-transparent">Notify Me</button>
                                         </div>
                                     </fieldset>
                                 </form>
