--- a/public/templates/index.html
+++ b/public/templates/index.html
@@ -146,7 +146,7 @@
   <div class="container">
     <div class="row">
       <div class="col-sm-6 col-sm-push-6 text-center">
-        <h4 class="content-title title-size text-center"> <span>What is 360notion™</span> </h4>
+        <h4 class="content-title title-size text-center"> <span>what is 360notion™</span> </h4>
         <p class="text-center large-text "> Whether you are a startup or a big enterprise, you need to engage with your coworkers in order to 
           get things done. After creating a 360notion™ network for your company, you can: </p>
         <br>
@@ -185,7 +185,7 @@
 <div class="why-choose360notion-bg">
   <div class="content">
     <div class="container">
-      <h4 class="content-title title-size text-center"> <span>Why choose 360notion™ for your company?</span> </h4>
+      <h4 class="content-title title-size text-center"> <span>why choose 360notion™ for your company?</span> </h4>
       <br>
       <div class="row">
         <div class="mini-feature">
@@ -221,7 +221,7 @@
     <div class="container">
       <div class="row">
         <div class="col-sm-6">
-          <h4 class="content-title title-size text-center"> <span>Latest News</span> </h4>
+          <h4 class="content-title title-size text-center"> <span>latest news</span> </h4>
           <div class="recent-news">
             <div class="recent-news-item clearfix">
               <div class="recent-news-item-date"> 18<span>May</span> </div>
@@ -245,7 +245,7 @@
           <br class="visible-xs">
         </div>
         <div class="col-sm-6">
-          <h4 class="content-title title-size text-center"> <span>Testimonials</span> <a class="btn btn-default btn-sm carousel-prev" href="#clients-carousel" data-slide="prev">&lsaquo;</a> <a class="btn btn-default btn-sm carousel-next" href="#clients-carousel" data-slide="next">&rsaquo;</a> </h4>
+          <h4 class="content-title title-size text-center"> <span>testimonials</span> <a class="btn btn-default btn-sm carousel-prev" href="#clients-carousel" data-slide="prev">&lsaquo;</a> <a class="btn btn-default btn-sm carousel-next" href="#clients-carousel" data-slide="next">&rsaquo;</a> </h4>
           <div id="clients-carousel" class="carousel slide" data-interval="0">
             <div class="carousel-inner">
               <div class="item active">
@@ -352,7 +352,7 @@
                                                 placeholder="Email Address">
               </div>
               <div class="form-group text-center">
-                <button type="submit" class="btn btn-transparent">Notify me</button>
+                <button type="submit" class="btn btn-transparent">Notify Me</button>
               </div>
             </fieldset>
           </form>
