--- a/public/templates/signup.html
+++ b/public/templates/signup.html
@@ -62,7 +62,7 @@
    <div class="account-wrapper">
         <div class="account-body">
             <h3>Get Started with a Free Account.</h3>
-            <h5>Sign up in less than 30 seconds, 14-day risk free trial</h5>
+            <h5>sign up in less than 30 seconds, 14-day risk free trial</h5>
 
             <form id="signup_form" action="/signup" method="POST" class="form account-form" role="form">
                 <fieldset>
