--- a/public/templates/checkout.html
+++ b/public/templates/checkout.html
@@ -153,7 +153,7 @@
 </select> <img src="https://www.merchantequip.com/image/?logos=v|m|a|d|jcb|dc&height=32" alt="Merchant Equipment Store Credit Card Logos" />
 </div>
 <div class="form-group">
-  <label for="name">Card number:</label>
+  <label for="name">Card Number:</label>
   <input id="name" class="form-control " type="text" data-required="true" name="name">
 
 </div>
@@ -190,9 +190,21 @@
 </div>
 <div class="form-group">
  <div class="form-group">
-                        <button type="submit" class="btn btn-secondary-new btn-jumbo-new ">Continue Checkout</button>
+                        <button type="submit" class="btn btn-primary btn-jumbo">Continue Checkout</button>
                       </div>
+                      
+                      <!-- Begin DigiCert site seal HTML and JavaScript -->
+<div id="DigiCertClickID_IoDwFwRX" data-language="en_US" class=" text-center padding-top">
+	<a href="http://www.digicert.com/ssl-certificate.htm"><img src="http://seal.digicert.com/seals/cascade/?s=_lfC4Ai8,11,m,www.digicert.com " alt="SSL Certificate"></a>
 </div>
+<script type="text/javascript">
+var __dcid = __dcid || [];__dcid.push(["DigiCertClickID_IoDwFwRX", "5", "l", "white", "IoDwFwRX"]);(function(){var cid=document.createElement("script");cid.async=true;cid.src="//seal.digicert.com/seals/cascade/seal.min.js";var s = document.getElementsByTagName("script");var ls = s[(s.length - 1)];ls.parentNode.insertBefore(cid, ls.nextSibling);}());
+</script>
+<!-- End DigiCert site seal HTML and JavaScript -->
+                      
+</div>
+
+
     </div>
     </div>
     </div>
