--- a/public/templates/editprofile.html
+++ b/public/templates/editprofile.html
@@ -137,7 +137,7 @@
       <div class="col-md-9 col-sm-8 profile-line-height">
         <h4 class="title-heading text-center">My Profile</h4>
         <div class="stream-box">
-          <h4 class="text-center"> personal infomation</h4>
+          <h4 class="text-center"> PERSONAL INFORMATION</h4>
           <p class="padding-top"></p>
           <div class="tab-pane fade in active" id="profile-tab">
             <form id="profile_form"
@@ -155,7 +155,7 @@
                       <div class="text-center padding-top"><span class="btn btn-primary"> Change Image</span>
                
                          <a href="#"
-                                                        class="btn btn-default fileupload-exists"
+                                                        class="btn btn-primary fileupload-exists"
                                                         data-dismiss="fileupload"> Remove </a></span>    </div>
                       
                     </div>
@@ -202,10 +202,10 @@
                   </div>
                 </div>
                 <div class="form-group">
-                  <div class="col-md-7 col-md-push-3">
+                  <div class="col-md-7 col-md-push-3 text-center">
                     <button type="submit" class="btn btn-primary">Save Changes</button>
                     &nbsp;
-                    <button type="reset" class="btn btn-default">Cancel</button>
+                    <button type="reset" class="btn btn-primary">Cancel</button>
                   </div>
                 </div>
               </fieldset>
@@ -213,7 +213,7 @@
           </div>
         </div>
         <div class="stream-box">
-          <h4 class="text-center"> education</h4>
+          <h4 class="text-center">EDUCATION</h4>
           <p class="padding-top"></p>
           <div class="tab-pane fade in active" id="profile-tab">
             <form id="profile_form"
@@ -275,10 +275,10 @@
                 </div>
                 <div class=" padding"> <a><i class="fa fa-plus "></i> add more</a> </div>
                 <div class="form-group">
-                  <div class="col-md-7 col-md-push-3">
+                  <div class="col-md-7 col-md-push-3 text-center">
                     <button type="submit" class="btn btn-primary">Save Changes</button>
                     &nbsp;
-                    <button type="reset" class="btn btn-default">Cancel</button>
+                    <button type="reset" class="btn btn-primary">Cancel</button>
                   </div>
                 </div>
               </fieldset>
@@ -286,7 +286,7 @@
           </div>
         </div>
         <div class="stream-box">
-          <h4 class="text-center"> contact infomation</h4>
+          <h4 class="text-center">CONTACT INFORMATION</h4>
           <p class="padding-top"></p>
           <div class="tab-pane fade in active" id="profile-tab">
             <form id="profile_form"
@@ -347,10 +347,10 @@
                   </div>
                 </div>
                 <div class="form-group">
-                  <div class="col-md-7 col-md-push-3">
+                  <div class="col-md-7 col-md-push-3 text-center">
                     <button type="submit" class="btn btn-primary">Save Changes</button>
                     &nbsp;
-                    <button type="reset" class="btn btn-default">Cancel</button>
+                    <button type="reset" class="btn btn-primary">Cancel</button>
                   </div>
                 </div>
               </fieldset>
@@ -358,7 +358,7 @@
           </div>
         </div>
         <div class="stream-box">
-          <h4 class="text-center">work experience</h4>
+          <h4 class="text-center">WORK EXPERIENCE</h4>
           <p class="padding-top"></p>
           <div class="tab-pane fade in active" id="profile-tab">
             <form id="profile_form"
@@ -420,10 +420,10 @@
                 </div>
                 <div class=" padding"> <a><i class="fa fa-plus "></i> add more</a> </div>
                 <div class="form-group">
-                  <div class="col-md-7 col-md-push-3">
+                  <div class="col-md-7 col-md-push-3 text-center">
                     <button type="submit" class="btn btn-primary">Save Changes</button>
                     &nbsp;
-                    <button type="reset" class="btn btn-default">Cancel</button>
+                    <button type="reset" class="btn btn-primary">Cancel</button>
                   </div>
                 </div>
               </fieldset>
