--- a/public/templates/settings.html
+++ b/public/templates/settings.html
@@ -72,39 +72,33 @@
               <div class="pull-left"> Alerts </div>
             </li>
             <li class="noticebar-empty">
-              <h4 class="noticebar-empty-title">You have no alerts.</h4>
+              <h4 class="noticebar-empty-title">You have no alerts. </h4>
               <p class="noticebar-empty-text">See what your colleagues are doing.</p>
             </li>
           </ul>
         </li>
-         <li class="dropdown"> <a href="javascript:;" class="dropdown-toggle" data-toggle="dropdown"> 
-         
-     
-         <i class="fa fa-user big-font"></i> <span class="navbar-visible-collapsed">&nbsp;Invite new members&nbsp;</span> <span class="badge-plus"><i class="fa fa-plus"></i></span> 
-        </a>
+        <li class="dropdown"> <a href="javascript:;" class="dropdown-toggle" data-toggle="dropdown"> <i class="fa fa-user big-font"></i> <span class="navbar-visible-collapsed">&nbsp;Invite new members&nbsp;</span> <span class="badge-plus"><i class="fa fa-plus"></i></span> </a>
           <ul class="dropdown-menu noticebar-menu noticebar-hoverable" role="menu">
             <li class="">
-              <div class=" text-center padding-top"> <h3>Invite More Coworkers</h3></div>
+              <div class=" text-center padding-top">
+                <h3>Invite More Coworkers</h3>
+              </div>
             </li>
             <li >
-            <div class="padding">
-              <div class="form-group padding-top">
-                        
-                        <input type="email"
+              <div class="padding">
+                <div class="form-group padding-top">
+                  <input type="email"
                             class="form-control validate[required,equals[password]]"
                             id=""
                             name=""
                             placeholder="name@companyemailaddress.com">
-                    </div>
-                    <div class="">
-            <a><i class="fa fa-plus padding remove_icon"></i>Add More Coworkers</a>
-           </div>
-           <div class="btn btn-primary pull-right">Invite</div>
-           </div>
+                </div>
+                <div class=""> <a><i class="fa fa-plus padding remove_icon"></i>Add More Coworkers</a> </div>
+                <div class="btn btn-primary pull-right">Invite</div>
+              </div>
             </li>
           </ul>
         </li>
-        
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li class="dropdown navbar-profile"> <a class="padding-top-home" href="/dashboard">Home</a> </li>
@@ -112,7 +106,7 @@
           <ul class="dropdown-menu" role="menu">
             <li> <a href="Profile.html"> <i class="fa fa-user"></i> &nbsp;&nbsp;My Profile </a> </li>
             <li class="divider"></li>
-             <li> <a href="/dashboard/settings"> <i class="fa fa-cogs"></i> &nbsp;&nbsp;Settings </a> </li>
+            <li> <a href="/dashboard/settings"> <i class="fa fa-cogs"></i> &nbsp;&nbsp;Settings </a> </li>
             <li class="divider"></li>
             <li> <a href="#" onclick="this.childNodes[0].submit()">
               <form action="/logout" method="POST">
@@ -127,164 +121,157 @@
 </header>
 <!--end header-->
 
- <div class="content">
-        <div class="container">
-            <div class="layout layout-stack-sm layout-main-right">
-                <div class="col-sm-3 layout-sidebar">
-                    <div class="nav-layout-sidebar-skip">
-                        <strong>Tab Navigation</strong> / <a href="#settings-content">Skip to Content</a> 
-                    </div>
-
-                    <ul id="myTab" class="nav nav-layout-sidebar nav-stacked">
-                       
-
-                       
-                        <li>
-                            <a href="#password-change" data-toggle="tab">
-                           <i class="fa fa-lock"></i>
-                           Change your Password
-                            </a>
-                        </li>
-
-                        <li>
-                            <a href="#notification" data-toggle="tab">
-                            <i class="fa fa-bullhorn"></i>
-  Notifications 
-                            </a>
-                        </li>
-
-                        
-                    </ul>
-                </div>
-
-                <div class="col-sm-9 layout-main">
-                    <div class="tab-content stacked-content">
-                        
-
-                       
-                        
-
-                        <div class="tab-pane fade active in" id="password-change">
-                            <h3 class="text-center"> Change Password</h3>
-<br>
-<br>
-<form class="form-horizontal" action="./page-settings.html">
-<div class="form-group">
-<label class="col-md-3">Old Password</label>
-<div class="col-md-7">
-<input class="form-control" type="password" name="old-password">
-</div>
-</div>
-<hr>
-<div class="form-group">
-<label class="col-md-3">New Password</label>
-<div class="col-md-7">
-<input class="form-control" type="password" name="new-password-1">
-</div>
-</div>
-<div class="form-group">
-<label class="col-md-3">New Password Confirm</label>
-<div class="col-md-7">
-<input class="form-control" type="password" name="new-password-2">
-</div>
-</div>
-<div class="form-group">
-<div class="col-md-7 col-md-push-3">
-<button class="btn btn-primary" type="submit">Save Changes</button>
-<button class="btn btn-default" type="reset">Cancel</button>
-</div>
-</div>
-</form>
-</div>
-
-                        <div class="tab-pane fade feature-text" id="notification">
-                            <h3 class=" text-center">
-Notification Settings
-</h3>
-
-<br>
-<form class="form form-horizontal" action="./page-settings.html">
-<div class="form-group">
-<label class="col-md-3">What You Get Notified About</label>
-<div class="col-md-7">
-<div class="checkbox">
-<label>
-<input type="checkbox" checked="" value="">
-Activity that involves you
-</label>
-</div>
-<div class="checkbox">
-<label>
-<input type="checkbox" checked="" value="">
-New messages
-</label>
-</div>
-<div class="checkbox">
-<label>
-<input type="checkbox" value="">
-Received new files
-</label>
-
-</div>
-<div class="checkbox">
-<label>
-</div>
-</div>
-</div>
-
-<div class="form-group">
-<label class="col-md-3">How You Get Notifications</label>
-<div class="col-md-7">
-<div class="checkbox">
-<label>
-<input type="checkbox" checked="" value="">
-on your emails
-</label>
-</div>
-<div class="checkbox">
-<label>
-<input type="checkbox" checked="" value="">
-on the 360notion™ dashboard
-</label>
-</div>
-<div class="checkbox">
-<label>
-<input type="checkbox" value="">
-show up as alerts on your phone
-</label>
-
-</div>
-<div class="checkbox">
-<label>
-</div>
-</div>
-</div>
-<div class="form-group">
-<label class="col-md-3">Email for Notifications</label>
-<div class="col-md-7">
-<select class="form-control" name="email_notifications">
-<option value="1">john@mvpready.com</option>
-<option value="2">mary@mvpready.com</option>
-<option value="3">chris@mvpready.com</option>
-</select>
-</div>
-</div>
-<div class="form-group">
-<div class="col-md-7 col-md-push-3">
-<button class="btn btn-primary" type="submit">Save Changes</button>
-<button class="btn btn-default" type="reset">Cancel</button>
-</div>
-</div>
-</form>
-                        </div>
-
-                       
-                    </div>
-                </div>
-            </div>
+<div class="content">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-3 col-sm-5">
+        <div class="profile-avatar padding-top"> <img src="../themes/landing/img/avatars/avatar-1-lg.jpg" class="profile-avatar-img thumbnail" alt="Profile Picture"> </div>
+        <div class="text-center">
+          <h5><a href="allfriend.html">123 Coworkers in Your Network</a></h5>
         </div>
+        <div class="list-group padding-top"> <a href="Activity Stream.html" class="list-group-item {@eq key="/dashboard" value="{url}"}current{/eq}"> <i class="fa fa-asterisk text-sidebar"></i> &nbsp;&thinsp;&thinsp;&thinsp;Activity Stream <i class="fa fa-chevron-right list-group-chevron"></i> </a> <a href="Activity Stream.html" class="list-group-item {@eq key="/dashboard" value="{url}"}current{/eq}"> <i class="fa fa-home text-sidebar"></i> &nbsp;&thinsp;&thinsp;&thinsp;My Activity Stream <i class="fa fa-chevron-right list-group-chevron"></i> </a> <a href="inbox.html" class="list-group-item {@eq key="/dashboard/messages" value="{url}"}current{/eq}"> <i class="fa fa-envelope text-sidebar"></i> &nbsp;&thinsp;Messages <i class="fa fa-chevron-right list-group-chevron"></i> <span class="badge">3</span> </a> <a href="files.html" class="list-group-item {@eq key="/dashboard/files" value="{url}"}current{/eq}"> <i class="fa fa-paperclip text-sidebar"></i> &nbsp;&nbsp;Files <i class="fa fa-chevron-right list-group-chevron"></i> </a> </div>
+      </div>
+      <!-- end left sidebar-->
+      <div class="col-md-9 col-sm-8 profile-line-height">
+        <h4 class="title-heading text-center">settings</h4>
+        <div class="stream-box">
+          <div class="tab-pane fade active in" id="password-change">
+            <h3 class="text-center"> Change Your Password</h3>
+            <br>
+            <br>
+            <form class="form-horizontal" action="./page-settings.html">
+              <div class="form-group">
+                <label class="col-md-3">current password</label>
+                <div class="col-md-7">
+                  <input class="form-control" type="password" name="old-password">
+                </div>
+              </div>
+              <hr>
+              <div class="form-group">
+                <label class="col-md-3">enter the new password</label>
+                <div class="col-md-7">
+                  <input class="form-control" type="password" name="new-password-1">
+                </div>
+              </div>
+              <div class="form-group">
+                <label class="col-md-3">enter the new password again</label>
+                <div class="col-md-7">
+                  <input class="form-control" type="password" name="new-password-2">
+                </div>
+              </div>
+              <div class="form-group padding-top">
+                <div class="col-md-7 col-md-push-3 text-center padding-top">
+                  <button class="btn btn-primary" type="submit">Save Changes</button>
+                  <button class="btn btn-primary" type="reset">Cancel</button>
+                </div>
+              </div>
+            </form>
+          </div>
+        </div>
+        
+      
+        <div class="stream-box">
+          <h3 class=" text-center"> Notification Settings </h3>
+          <br>
+          <form class="form-horizontal" action="./page-settings.html">
+          <div class="padding"><b> what do you want to receive notifications on?</b> </div>
+          <div class="text-center">
+            <div class="checkbox padding">
+              <label>
+                <input type="checkbox" checked="" value="">
+                activities that involve me </label>
+            </div>
+            <div class="checkbox padding">
+              <label>
+                <input type="checkbox" checked="" value="">
+                new messages </label>
+            </div>
+            <div class="checkbox padding">
+              <label>
+                <input type="checkbox" value="">
+                received new files </label>
+            </div>
+          </div>
+          <div class="padding"><b>how do you want to receive notifications?</b></div>
+          <div class="text-center">
+            <div class="checkbox">
+              <label>
+                <input type="checkbox" checked="" value="">
+                on the 360notion™ dashboard </label>
+            </div>
+            <div class="checkbox">
+              <label>
+                <input type="checkbox" value="">
+                alerts on your mobile phone </label>
+            </div>
+          </div>
+          <div class="form-group text-center padding">
+            <div class="col-md-7 col-md-push-3 padding-top">
+              <button class="btn btn-primary" type="submit">Save Changes</button>
+              <button class="btn btn-primary" type="reset">Cancel</button>
+            </div>
+            </form>
+          </div>
+        </div>
+        
+         <div class="stream-box">
+          <h3 class=" text-center"> Alert Settings </h3>
+          <br>
+          <form class="form-horizontal" action="./page-settings.html">
+          <div class="padding"><b> what do you want to receive an alert?</b> </div>
+          <div class="text-center">
+            <div class="checkbox padding">
+              <label>
+                <input type="checkbox" checked="" value="">
+                change in Relationship status</label>
+            </div>
+            <div class="checkbox padding">
+              <label>
+                <input type="checkbox" checked="" value="">
+                change in job title </label>
+            </div>
+            <div class="checkbox padding">
+              <label>
+                <input type="checkbox" value="">
+                change in department </label>
+                 </label>
+            </div>
+             <div class="checkbox padding">
+              <label>
+              
+                <input type="checkbox" value="">
+                change in skills </label>
+            </div>
+          </div>
+          <div class="padding"><b>how do you want to receive alerts?</b></div>
+          <div class="text-center">
+            <div class="checkbox">
+              <label>
+                <input type="checkbox" checked="" value="">
+                on the 360notion™ dashboard </label>
+            </div>
+            <div class="checkbox">
+              <label>
+                <input type="checkbox" value="">
+                alerts on your mobile phone </label>
+            </div>
+          </div>
+          <div class="form-group text-center padding">
+            <div class="col-md-7 col-md-push-3 padding-top">
+              <button class="btn btn-primary" type="submit">Save Changes</button>
+              <button class="btn btn-primary" type="reset">Cancel</button>
+            </div>
+            </form>
+          </div>
+        </div>
+        <br class=" padding-top">
+      </div>
+      <!--project--> 
+      
+      <!--end--> 
     </div>
-
+  </div>
+</div>
 <!-- Bootstrap core JavaScript  --> 
 <script type="text/javascript" src="../themes/admin/js/libs/jquery-1.10.2.min.js"></script> 
 <script type="text/javascript" src="../themes/admin/js/libs/bootstrap.min.js"></script> 
