--- a/public/themes/admin/css/mvpready-admin.css
+++ b/public/themes/admin/css/mvpready-admin.css
@@ -2870,26 +2870,28 @@ a:hover, a:focus {
 }
 
 
+/* placeholder color*/
+.form-control::-webkit-input-placeholder {
+    color: #212121; opacity:70%;
+}
+.form-control::-moz-placeholder {
+   color:#212121;font-weight:bold;
+   opacity:70%;;
+}
 ::-webkit-input-placeholder {
-font-weight:bold;
-font-size:14px;
-color:#4B473A; opacity:1;
+ color:#212121;font-weight:bold; opacity:70%;
 }
 ::-moz-placeholder {
-font-weight:bold;font-size:14px;
-color:#4B473A; opacity:1;
+ color:#212121;font-weight:bold; opacity:70%;
 } /* firefox 19+ */
 :-ms-input-placeholder {
-font-weight:bold;font-size:14px;
-color:#4B473A; opacity:1;
+ color:#212121;font-weight:bold; opacity:70%;
 } /* ie */
 input:-moz-placeholder {
-font-weight:bold;font-size:14px;
-color:#4B473A;opacity:1;
+color:#212121;font-weight:bold;opacity:70%;
 }
 #placeholder::-moz-placeholder {
-font-weight:bold;font-size:14px;
-color:#4B473A; opacity:1;}
+ color:#212121;font-weight:bold; opacity:70%;}
 
 .center-column-padding {
 	padding-left: 0px;
@@ -2908,5 +2910,11 @@ color:#4B473A; opacity:1;}
 .coworker-plus-icon { font:13px; color:#F0AD06; text-align:left bottom;}
 .coworker-box {margin:5px; background-color: #f5f5f5;
     border: 1px solid #e3e3e3;
-    border-radius: 4px; max-width:280px; padding:10px;}
-	
+    border-radius: 4px; min-width:250px; padding:10px;}
+	.all-coworker img {
+	border: 1px solid #ddd;
+	border-radius: 50px;
+	height: 50px;
+	padding: 1px;
+	width: 50px;
+}
